# Astral

./: .gitignore  Astral - Manual.docx  Dockerfile  README.md  astro-Dockerfile  docker-compose.yml  docker-compose_temp.yml  entrypoint.sh  pyproject.toml  requirements.txt  requirements_full.txt  requirements_streamlit.txt  streamlit-Dockerfile  variables.json
astrowaves/: config.py  metrics.py  utils.py
astrowaves/airflow/: utils.py
astrowaves/animations/: animation_tools.py
astrowaves/apps/: astro3d.py
astrowaves/dash/: dashboard.py
astrowaves/data/: DataLoader.py
astrowaves/detection/: CalciumWaveDetector.py
astrowaves/gather/: CalciumWaveDetector.py  CalciumWaveSegmenter.py  __init__.py
astrowaves/helpers/: Config.py
astrowaves/luigi_tasks/: LuigiConfig.py  SplitTiff.py  config.xml
astrowaves/preprocessing/: CalciumWaveDetector.py  CalciumWaveTimeSpace.py  CalciumWaveTimeSpaceCreator.py  CalciumWavesExtractor.py  MaskGenerator.py  TiffSplitter.py  __init__.py
cfg/: cfg.xml  cfg_test.xml
docker/: airflow.cfg
notebooks/: Astrospace.ipynb  CalciumWaveDetector.ipynb  CalciumWaveSegmenter.ipynb  Center_of_mass.ipynb  Dask.ipynb  DataExtraction.ipynb  DataMining.ipynb  Debug.ipynb  DetectW_Debug.ipynb  Labelling_Segmnetation3D.ipynb  RegionGrowing.ipynb  RepeatsFinder.ipynb  Waves_repr_handling.ipynb  tiff_visualization.ipynb
test/: __init__.py  test_CalciumWavesExtractor.py  test_MaskGenerator.py  test_MetadataGenerator.py  test_MorphologyCreator.py  test_NeighbourFinder.py  test_Pipeline.py  test_RepeatsFinder.py  test_TimelapseCreator.py
(+35 files in other folders)
