[tool.poetry]
name = "astral"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7.1"
czifile = "^2019.7.2"
opencv-python = "^4.5.1"
pandas = "^1.2.4"
tables = "^3.6.1"
scikit-image = "^0.18.1"
apache-airflow = "^2.0.2"
tqdm = "^4.60.0"
joblib = "^1.0.1"
scikit-learn = "^0.24.2"
ffmpeg-python = "^0.2.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
black = "^21.4b2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
